Impl: all config parameters can be customized from now on
